--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New year new me</title>
+    <!-- google fonts linkup -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- style css linkup -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <!-- header part start -->
     <header>
+         <div class="banner-part">
+            <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+         <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+         <button class="banner-btn">Contact Us</button>
+         </div>
           
     </header>
      <!-- main part start -->
