my failures part added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
     </header>
      <!-- main part start -->
     <main>
+            <!-- my failures part start -->
+        <section>
+            <div class="my-failures-part">
+                <div class="left-part">
+                    <img src="images/person.png" alt="person.png">
+                </div>
+                <div class="right-part">
+                    <h2 class="failures-part-title">My failures of previous year</h2>
+                    <p class="failures-part-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                    <ul class="bulet-point-list">
+                        <li><a href="">Contrary to popular belief, is not simply.</a></li>
+                        <li><a href="">Contrary to popular belief.</a></li>
+                        <li><a href="">Contrary to popular , is not simply.</a></li>
+                        <li><a href="">Contrary to popular belief, is not simply.</a></li>
+                        <li><a href="">Contrary to popular simply.</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
     </main>
       <!-- footer part start -->
