--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
                 </div>
             </div>
         </section>
+        <!-- my plan part start -->
+        <section>
+            <h2 class="my-plan-title">My Plans</h2>
+            <div class="my-plan-chart">
+                <div class="my-plan-element">
+                    <img src="images/icons/web.png" alt="web.png">
+                    <h3 class="element-title">Web Development</h3>
+                    <p class="element-description">I want to start</p>
+                </div>
+                <div class="my-plan-element">
+                    <img src="images/icons/js.png" alt="js.png">
+                    <h3 class="element-title">Javascript</h3>
+                    <p class="element-description">I want to learn</p>
+                </div>
+                <div class="my-plan-element">
+                    <img src="images/icons/smoke.png" alt="smoke.png">
+                    <h3 class="element-title">Smoking Habit</h3>
+                    <p class="element-description">I want to end</p>
+                </div>
+                <div class="my-plan-element">
+                    <img src="images/icons/ecom.png" alt="ecom.png">
+                    <h3 class="element-title">ecommerce</h3>
+                    <p class="element-description">I want to develop</p>
+                </div>
+            </div>
+        </section>
+
+        
 
     </main>
       <!-- footer part start -->
